--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block meta %}
-<title>GMDb: Find Your Movies</title>
+<title>Search results for "{{search_query}}" — GMDb</title>
 <style>
     .grid-wrapper-container {
         position: relative;
