--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,118 @@
 body {
 	color: white;
 }
+
+.infobox {
+	display: flex;
+	flex-direction: column;
+	float: right;
+	clear: right;
+	margin-left: 1rem;
+	background-color: rgba(255, 255, 255, 0.2);;
+	border: 1px solid rgba(255, 255, 255, 0.4);
+	border-radius: .3rem;
+	font-size: 85%;
+	width: 22rem;
+	padding: 0.25rem;
+}
+
+.infobox table {
+	width: 100%;
+	margin-bottom: 0;
+	border-spacing: 0.25rem;
+	border-collapse: separate;
+}
+
+.infobox table ul,
+.infobox table ol {
+	margin-bottom: 0;
+	padding-left: 0.675rem;
+}
+
+.infobox table tr {
+	margin-bottom: 0.5rem;
+}
+
+.infobox table td {
+	vertical-align: top;
+}
+
+.infobox > * {
+	margin-bottom: 0.5rem;
+}
+
+.infobox > *:last-child {
+	margin-bottom: 0;
+}
+
+.infobox-img {
+	width: 100%;
+	max-width: 300px;
+}
+
+.infobox-img-parent {
+	text-align: center;
+}
+
+.infobox-name {
+	font-weight: bold;
+	text-align: center;
+}
+
+.infobox-label {
+	font-weight: bold;
+}
+
+.infobox-data:only-child {
+	text-align: center;
+}
+
+.cast-grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	gap: 0.5rem;
+}
+
+.cast-img {
+	width: 100%;
+	aspect-ratio: 2/3;
+	object-fit: cover;
+}
+
+.movie-header {
+	display: grid;
+	  grid-template-columns: 1fr;
+}
+
+.movie-header-title {
+	grid-row: 1;
+	grid-column: 1
+}
+
+.movie-header-rating {
+	grid-row: 1;
+	grid-column: 2;
+	display: flex;
+	gap: 1rem;
+}
+
+.movie-header-rating > div > * {
+	margin-bottom: 0;
+}
+
+.movie-header-rating-source {
+	font-weight: bold
+}
+
+.movie-header-rating-score {
+	font-size: 150%
+}
+
+.movie-header-rating-sub {
+	font-size: 70%
+}
+
+.movie-header-overview {
+	grid-row: 2;
+	grid-column-start: span 2
+}
