--- a/gmdb/templates/movie-detail.html
+++ b/gmdb/templates/movie-detail.html
@@ -11,7 +11,7 @@
 <body>
     {% include 'header.html' %}
     <div class="container my-4">
-        <div class="movie-header">
+        <div class="movie-header mb-4">
             <div class="movie-header-title">
                 <h1>{{ movie_name }}</h1>
                 <p>{{ release_year }} · {{ certification }} · {{ runtime.text }}</p>
