Footer dan penyesuaian lainnya

--- a/gmdb/templates/footer.html
+++ b/gmdb/templates/footer.html
@@ -3,7 +3,7 @@
 <footer>
 	<div class="container my-4">
 		<div class="row">
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6 col-lg-9">
 				<p class="h3 font-weight-bold mb-0">
 					<i class="fa-solid fa-hexagon-nodes"></i>
 					<i class="fa-solid fa-film"></i>
@@ -11,14 +11,18 @@
 				</p>
 				<p class="mb-2">Graph Movie Database</p>
 				<p class="mb-0">A place to find your movies.</p>
-				<p class="mb-0">Made by LGTM</p>
+				<p class="mb-2">Made by <a href="https://github.com/LGTM-KG">LGTM</a></p>
+				<p class="mb-0">All data are subject to individual licenses and are used for educational purposes only.</p>
+				<p>Contents from Wikipedia and DBpedia are licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.</p>
 			</div>
-			<div class="col-12 col-md-6">
-				<h3 class="h5">Links</h3>
+			<div class="col-12 col-md-6 col-lg-3">
+				<h3 class="h5">Sources</h3>
 				<ul class="list-unstyled text-white">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="https://www.kaggle.com/datasets/harshitshankhdhar/imdb-dataset-of-top-1000-movies-and-tv-shows">Dataset: IMDB Movies</a></li>
+					<li><a href="https://www.kaggle.com/datasets/sanjeetsinghnaik/top-1000-highest-grossing-movies">Dataset: Highest Grossing Movies</a></li>
+					<li><a href="https://www.wikidata.org/">Wikidata</a></li>
+					<li><a href="https://en.wikipedia.org/">Wikipedia</a></li>
+					<li><a href="https://www.dbpedia.org/">DBpedia</a></li>
 				</ul>
 		</div>
 	</div>
