--- a/gmdb/templates/header.html
+++ b/gmdb/templates/header.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-dark bg-dark">
+<header class="navbar navbar-expand navbar-dark bg-dark">
 	<div class="container">
 		<a class="navbar-brand font-weight-bold" href="/">
 			<i class="fa-solid fa-hexagon-nodes"></i>
