--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@ body {
 	float: right;
 	clear: right;
 	margin-left: 1rem;
-	background-color: rgba(255, 255, 255, 0.2);;
+	background-color: #212529;
 	border: 1px solid rgba(255, 255, 255, 0.4);
 	border-radius: .3rem;
 	font-size: 85%;
@@ -81,7 +81,8 @@ body {
 
 .movie-header {
 	display: grid;
-	  grid-template-columns: 1fr;
+	grid-template-columns: 1fr;
+	gap: 0.25rem;
 }
 
 .movie-header-title {
@@ -106,6 +107,10 @@ body {
 
 .movie-header-rating-score {
 	font-size: 150%
+}
+
+.movie-header-rating-score small {
+	font-size: 70%
 }
 
 .movie-header-rating-sub {
@@ -135,4 +140,9 @@ body {
 
 iconify-icon {
 	vertical-align: -0.125rem;
+}
+
+.navbar-expand > .container, .navbar-expand > .container-fluid, .navbar-expand > .container-lg, .navbar-expand > .container-md, .navbar-expand > .container-sm, .navbar-expand > .container-xl {
+	padding-right: 15px;
+	padding-left: 15px;
 }
