Tambah footer ke halaman detail

--- a/gmdb/templates/movie-detail.html
+++ b/gmdb/templates/movie-detail.html
@@ -190,5 +190,6 @@
         <!-- <h2>Query result</h2>
         <pre class="text-wrap">{{ result }}</pre> -->
     </div>
+    {% include 'footer.html' %}
 </body>
 {% endblock content%}
