Perbaiki nama aplikasi

--- a/gmdb/templates/footer.html
+++ b/gmdb/templates/footer.html
@@ -9,7 +9,7 @@
 					<i class="fa-solid fa-film"></i>
 					GMDb
 				</p>
-				<p class="mb-2">Graph Movie Database</p>
+				<p class="mb-2"> Graph-based Movie Database</p>
 				<p class="mb-0">A place to find your movies.</p>
 				<p class="mb-2">Made by <a href="https://github.com/LGTM-KG">LGTM</a></p>
 				<p class="mb-0">All data are subject to individual licenses and are used for educational purposes only.</p>
