--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -99,7 +99,7 @@
                 <i class="fa-solid fa-hexagon-nodes"></i>
                 <i class="fa-solid fa-film"></i> 
                 GMDb
-                <small>Graph Movie Database</small>
+                <small> Graph-based Movie Database</small>
             </h1>
             <div class="input-group rounded">
                 <form class="d-flex w-100 mr-2" action="{% url 'gmdb:search_movies' %}" method="GET">
