--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -30,6 +30,7 @@
     .grid-wrapper .item:hover {
         transform: scale(1.05);
         z-index: 2;
+        cursor: pointer;
     }
 
     .card-img-top {
